- fix frame blending starting too late